--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -518,6 +518,7 @@
 			font-weight: 900;
 			letter-spacing: -0.035em;
 			line-height: 1em;
+			font-family: 'Source Sans Pro', sans-serif;
 		}
 
 		#header p {
